cmake_minimum_required(VERSION 3.16)
project(try)

set(CMAKE_CXX_STANDARD 14)

#[[add_executable(try main.cpp)]]
#[[add_executable(try com/my/project/HelloWorld.cpp)]]
#[[add_executable(try com/my/project/InputAndOutput.cpp)]]
#[[add_executable(try com/my/project/LineFeed.cpp)]]
#[[add_executable(try com/my/project/Sum.cpp)]]
#[[add_executable(try com/my/project/DataType.cpp)]]
#[[add_executable(try com/my/project/Test.cpp)]]
#[[add_executable(try com/my/project/TypeDefTest.cpp)]]
#[[add_executable(try com/my/project/EnumTest.cpp)]]
add_executable(try com/my/project/ViriableType.cpp)
